--- a/app/src/main/res/layout/activity_timing_setting.xml
+++ b/app/src/main/res/layout/activity_timing_setting.xml
@@ -16,10 +16,81 @@
     android:layout_height="wrap_content"
     android:text="上传时间间隔"
     android:paddingLeft="15dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <RelativeLayout
+        android:id="@+id/rl6"
+        android:layout_width="match_parent"
+
+        android:layout_height="55dp"
+        android:paddingLeft="20dp"
+        android:background="@drawable/layout_bottom_line"
+        android:paddingRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="1分钟"/>
+        <ImageView
+            android:id="@+id/check6"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:visibility="gone"
+            android:src="@mipmap/icon_sure"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl7"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:paddingLeft="20dp"
+        android:background="@drawable/layout_bottom_line"
+        android:paddingRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="3分钟"/>
+        <ImageView
+            android:id="@+id/check7"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:visibility="gone"
+            android:src="@mipmap/icon_sure"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl8"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:paddingLeft="20dp"
+        android:background="@drawable/layout_bottom_line"
+        android:paddingRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="5分钟"/>
+        <ImageView
+            android:id="@+id/check8"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:visibility="gone"
+            android:src="@mipmap/icon_sure"/>
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl1"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="55dp"
         android:paddingLeft="20dp"
         android:background="@drawable/layout_bottom_line"
@@ -122,4 +193,6 @@
             android:layout_alignParentRight="true"
             android:src="@mipmap/icon_sure"/>
     </RelativeLayout>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
