--- a/app/src/main/res/layout/fragment_device_message.xml
+++ b/app/src/main/res/layout/fragment_device_message.xml
@@ -20,6 +20,7 @@
             android:textColor="@color/black"
             android:text="Y12345/无线"/>
         <TextView
+            android:visibility="gone"
             android:id="@+id/warning_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,6 +31,7 @@
             android:text="@string/ggyc"/>
         <TextView
             android:id="@+id/dl"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="电量10%"
