--- a/app/src/main/res/layout/layout_marker_stop.xml
+++ b/app/src/main/res/layout/layout_marker_stop.xml
@@ -4,6 +4,15 @@
     android:alpha="0.5"
     android:background="@drawable/icons_txtbg_tr"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <ImageView
+        android:id="@+id/delete_mark"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@mipmap/delete"
+        android:layout_gravity="right"
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="3dp"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
