--- a/app/src/main/res/layout/activity_customerservice.xml
+++ b/app/src/main/res/layout/activity_customerservice.xml
@@ -29,13 +29,21 @@
                 android:id="@+id/callmobile"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-
+                android:gravity="center_horizontal"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/layout_radius">
-
+                <TextView
+                    android:id="@+id/numberr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/red"
+                    android:gravity="center"
+                    android:text="客服热线：" />
                 <TextView
                     android:id="@+id/number"
+                    android:layout_toRightOf="@id/numberr"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
