--- a/app/src/main/res/layout/activity_customerservice.xml
+++ b/app/src/main/res/layout/activity_customerservice.xml
@@ -38,7 +38,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
-                    android:textColor="@color/red"
                     android:gravity="center"
                     android:text="客服热线：" />
                 <TextView
@@ -55,13 +54,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:gravity="center_horizontal"
                 android:layout_below="@id/callmobile"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="客服热线：周一至周五（8:30-20:00)/周六至周日（9:00-18:00)"
+                android:text="周一至周五（8:30-20:00)/周六至周日（9:00-18:00)"
                 android:textSize="12dp" />
 
 
